# Cafebot_automation

./: README.md  map1_save.pgm  map1_save.yaml
install/: local_setup.sh  setup.sh
install/cafe_bot/lib/cafe_bot/: order  task1  task6  task7
install/cafe_bot/share/ament_index/resource_index/package_run_dependencies/: cafe_bot
install/cafe_bot/share/cafe_bot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cafe_bot/share/cafe_bot/description/: gazebo_control.xacro
install/cafe_bot/share/cafe_bot/launch/: cafeBot_ws.code-workspace  sim_launch.py
log/: latest_build  latest_list
src/cafe_bot/: CMakeLists.txt
src/cafe_bot/config/: location.yaml  mapper_params_online_async.yaml
src/cafe_bot/description/: bot_structure.urdf.xacro  sensor.xacro
src/cafe_bot/src/: order.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
src/cafe_bot/world/: cafe.world
